--- a/style.css
+++ b/style.css
@@ -18,9 +18,9 @@ img {
 
 h1 {
     text-align: center;
-    padding: 21px;
+    padding: 11px;
     font-family: sans-serif;
-    color: white;
+    color: pink;
     font-size: 30px;
     animation: blink 1s linear
     infinite;
@@ -71,8 +71,9 @@ a:hover {
 }
 
 .bottom-text {
+    color: skyblue;
     text-align: center;
     margin-top: 40px;
-    font-size: 40px;
+    font-size: 20px;
     font-weight: bold;
 }
